--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo2.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/01Capitulo2.tex
@@ -151,7 +151,7 @@ Al poseer la lógica de negocios dentro del Web Service, la aplicación deberá con
 %-------------------------------------------------------------------
 \label{cap2:subsec:lenguaje-programacion}
 
-Para llevar adelante el desarrollo de la aplicación móvil se escogió el lenguaje de programación Java. Es muy conocido en el ambiente de programación Android, por ser un lenguaje que tiene una comunidad bastante grande y sobre todo una comunidad con bastante experiencia en el desarrollo de software. Java juega un papel muy importante, principalmente en el soporte ante casi cualquier eventualidad presentada.
+Para llevar adelante el desarrollo de la aplicación móvil se escogió el lenguaje de programación Java. Es muy conocido en el ambiente de programación Android, por ser un lenguaje que cuenta con una comunidad de más de 9 millones de desarrolladores en todo el mundo con gran experiencia en el desarrollo de software \cite{javacomunidad}. Java juega un papel muy importante, principalmente en el soporte ante casi cualquier eventualidad presentada.
 \\
 
 En los últimos años apareció el lenguaje de programación Kotlin, el cual fue adoptado por Google como lenguaje oficial de desarrollo Android. Para los fines prácticos del proyecto, los resultados podrían ser alcanzados utilizando tanto Java como Kotlin. Sin embargo, este último al poseer pocos años dentro del mercado, la cantidad de información disponible en la web es muy escasa, haciendo que a la hora de escoger entre los mencionados la decisión sea Java.
@@ -176,6 +176,7 @@ Por lo tanto, la máquina virtual de Java (JVM) se sitúa en un nivel superior al 
 		\includegraphics[width=0.8\textwidth]%
 		{Imagenes/Bitmap/jvm}
 		\caption{Máquina virtual Java - JVM}
+		\small\textsuperscript{\textit{Imagen extraída del libro ``Fundamentos de Programación en Java'' J.Martinez.}}
 		\label{fig:jvm}
 	\end{center}
 \end{figure}
@@ -224,6 +225,7 @@ La metodología de trabajo que posee esta arquitectura, es un cliente realizando 
 		\includegraphics[width=0.8\textwidth]%
 		{Imagenes/Bitmap/cliente_servidor}
 		\caption{Cliente - Servidor}
+		\small\textsuperscript{\textit{Imagen: https://academiaandroid.com/aplicaciones-cliente-servidor-y-redes-de-telefonia-movil/}}
 		\label{fig:cliente-servidor}
 	\end{center}
 \end{figure}
@@ -293,6 +295,7 @@ Un mensaje HTTP, sin importar si es una petición o una respuesta, está compuesto
 		\includegraphics[width=1\textwidth]%
 		{Imagenes/Bitmap/http-messages}
 		\caption{Mensajes HTTP}
+		\small\textsuperscript{\textit{Imagen: https://blog.makeitreal.camp/el-protocolo-http/}}
 		\label{fig:http-messages}
 	\end{center}
 \end{figure}
@@ -424,6 +427,7 @@ Al realizar una petición HTTP, el contenedor de Servlets delega la misma a un Se
 		\includegraphics[width=1\textwidth]%
 		{Imagenes/Bitmap/servlet}
 		\caption{Peticiones y manejo de Servlet}
+		\small\textsuperscript{\textit{Imagen: http://tutorials.jenkov.com/java-servlets/overview.html}}
 		\label{fig:servlet}
 	\end{center}
 \end{figure}
@@ -481,6 +485,7 @@ Para el desarrollo del proyecto se utilizará como mínima versión la 4.4 \textit{
 		\includegraphics[width=0.8\textwidth]%
 		{Imagenes/Bitmap/android_version}
 		\caption{Versiones de Android. Estadística presentada por Android Studio siempre que se crea un nuevo proyecto desde el IDE}
+		\small\textsuperscript{\textit{Imagen: https://developer.android.com/studio}}
 		\label{fig:android_version}
 	\end{center}
 \end{figure}
