--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo1.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/03Capitulo1.tex
@@ -27,7 +27,7 @@ Para la elección de las distintas tecnologías a utilizar, se tuvo en cuenta su r
 Respecto a los objetivos definidos en la Sección \ref{cap1:sec:objetivos}, se considera que se pudo cumplir con lo planificado, ya que la aplicación permite la confección de encuestas para luego ser respondidas y obtener inmediatamente los resultados. La aplicación es lo suficientemente robusta como para manejar excepciones y situaciones que son consideradas fuera de lo normal, informado al usuario cual es el error e indicándole que debe realizar para continuar. Se pudieron explotar los distintos beneficios que presentan los smartphones, como la utilización de sensores, conexión a Internet y almacenamiento, entre otras cosas.
 \\
 
-Si bien aún no fue llevado adelante la puesta en producción para su utilización en la Facultad de Ciencias Médicas, se verificó que la aplicación obtiene las respuestas de los usuarios sobre las encuestas en cuestión de segundos, pudiendo armar distintas estadísticas en forma inmediata. Además fue posible exportar los resultados en un formato legible para que los profesionales adecuados puedan trabajar sobre ellos. Gracias al sensor GPS de los dispositivos móviles y a los API de Google mencionados anteriormente, fue posible armar mapas estadísticos lo cual muestra la distribución zonal de respuestas, permitiendo un mejor análisis.
+Si bien aún no fue llevado adelante la puesta en producción para su utilización en la Facultad de Ciencias Médicas, se verificó que la aplicación obtiene las respuestas de los usuarios sobre las encuestas en cuestión de segundos, pudiendo armar distintas estadísticas en forma inmediata. Además fue posible exportar los resultados en un formato legible para que los profesionales especializados puedan trabajar sobre ellos. Gracias al sensor GPS de los dispositivos móviles y a los API de Google mencionados anteriormente, fue posible armar mapas estadísticos lo cual muestra la distribución zonal de respuestas, permitiendo un mejor análisis.
 \\
 
 A nivel personal como punto importante a destacar, el desarrollo de este proyecto permitió el aprendizaje de nuevas tecnologías, lenguajes de programación y arquitecturas involucradas, así como también el refuerzo de conocimientos sobre aquellas ya estudiadas anteriormente. Además, se pasó por las distintas etapas necesarias para puesta en producción de un producto, como ser el diseño, desarrollo y despliegue en un servidor (aunque haya sido en forma local). Esto logra la obtención de una mayor experiencia que sirve como complemento en el desarrollo personal de la vida profesional.
