--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte3.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Capitulos/Parte3.tex
@@ -38,7 +38,7 @@
 \partTitle{Testeo y conclusiones}
 
 \partDesc{En esta última parte de la tesis se mostrarán los test realizados para corroborar el correcto funcionamiento de los productos desarrollados.
-Además, se dará un cierre al trabajo expresando las conclusiones abordadas y las posibles mejores a realizarse en un futuro.}
+Además, se dará un cierre al trabajo expresando las conclusiones abordadas y las posibles mejoras a realizarse en un futuro.}
 
 \partBackText{}
 
