--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/cover.tex
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/Cascaras/cover.tex
@@ -69,7 +69,7 @@ Desarrollo de aplicación móvil para el diseño y procesamiento de encuestas públi
 % \fechaPublicacion{Fecha}
 % Puede ser vacío. Aparece en la última línea de ambas portadas
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\fechaPublicacion{Abril 2019}
+\fechaPublicacion{Septiembre 2019}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Imagen de la portada (y escala)
