--- a/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
+++ b/Facundo Salmerón/Etapas/5- Informe Final/encuestando-tesis/Informe/citasCapitulo1.bib
@@ -38,6 +38,13 @@
 	note = {Accedido: 13/12/2018}
 }
 
+@misc{javacomunidad,
+	title = {Conozca m{\'a}s sobre la tecnolog{\'i}a Java.},
+	author = {Oracle},
+	howpublished = {\url{https://www.java.com/es/about/}},
+	note = {Accedido: 13/12/2018}
+}
+
 @book{itemsImportancia,
 	title={Evaluar para seguir adelante: Resultados del Programa Redes},
 	author={C. Cejas and M. Pen{\'e} and A. Macchia and D. Ferrante},
